--- a/styles/app/tabStyles.scss
+++ b/styles/app/tabStyles.scss
@@ -12,3 +12,9 @@
 .tabItem{
     background-color: #383838;
 }
+
+.notificationTabTask {
+    position: absolute;
+    margin-top: -20px !important;
+    margin-left: 30px !important;
+}
