Se corrige la posición de la notificación en el tab de tareas

--- a/styles/app/tabStyles.scss
+++ b/styles/app/tabStyles.scss
@@ -14,7 +14,7 @@
 }
 
 .notificationTabTask {
-    position: absolute;
-    margin-top: -20px !important;
-    margin-left: 30px !important;
+    top: -2em !important;
+    left: 4em !important;
+    position: relative !important;
 }
