--- a/styles/pagination/main.scss
+++ b/styles/pagination/main.scss
@@ -1,6 +1,6 @@
 .item-page {
     &.active {
-        background-color: #6c96c2 !important;
+        background-color: #00448c !important;
         color: #fff !important;
     }
 }
