--- a/styles/app/tabStyles.scss
+++ b/styles/app/tabStyles.scss
@@ -1,5 +1,5 @@
 .tabGenericComponent .ui.secondary.pointing.menu .active.item {
-    border-bottom-color: #3498db;
+    border-bottom-color: #00448c;
     &:hover {
         border-bottom-color: #69abd6;
         color: #383838;
