--- a/styles/app/comments_avatar.scss
+++ b/styles/app/comments_avatar.scss
@@ -9,7 +9,7 @@
     font-size: 16px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     float: left;
     margin: 0 10px 0 0;
   }
