--- a/styles/app/global.scss
+++ b/styles/app/global.scss
@@ -277,3 +277,7 @@ p {
 .checkBankerSeniorDisable {
   background-color: transparent !important;
 }
+
+.highlightClass {
+  background-color: #8CDFFB;
+}
