Correccion de saltos de linea en el contenido de la nota

--- a/styles/app/comments.scss
+++ b/styles/app/comments.scss
@@ -53,6 +53,7 @@
     padding-left: 5em !important;
   }
 
-  .commentReplies{
-
+  .ui.comments .comment .actions {
+    font-size: 0.875em;
+    margin-left: 65px;
   }
