--- a/styles/importantDates/main.scss
+++ b/styles/importantDates/main.scss
@@ -1,3 +1,14 @@
+.importantDateTabs{
+    .tabGenericComponent{
+        .generic-tab-segment{
+            padding-top: 3px;
+            padding-left: 2px;
+            padding-right: 2px;
+            margin: 2px;
+        }
+    }
+}
+
 .importantDatesStyle {
     width: 33% !important;
     min-width: 33% !important;
