--- a/styles/app/global.scss
+++ b/styles/app/global.scss
@@ -7,9 +7,52 @@
 }
 
 .hidden {
+  
   display: none !important;
 }
+.hidden-info{
+  opacity: 0;
+  display: none !important;
+  transition: opacity 0.5s linear;
+  -webkit-transition: opacity 0.5s linear;
+  -moz-transition: opacity 0.5s linear;
+  -o-transition: opacity 0.5s linear;
+  -ms-transition: opacity 0.5s linear;
+}
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+.showen-indo{
+  transition: visibility 2s linear;
+  visibility: visible;
+}
+.icon-normal{
+  transition: transform 0.6s ease;
+}
+.standard-div{
+  transition: all 2s linear;
+}
+.hidden-icon{
+  transform: rotate(0deg);
+}
+.showen-icon{
+  transform: rotate(180deg);
+}
 *:focus {
   outline: none;
 }
