--- a/styles/app/global.scss
+++ b/styles/app/global.scss
@@ -43,6 +43,8 @@
 }
 .icon-normal{
   transition: transform 0.6s ease;
+  margin-bottom: 7px;
+  margin-top: 12px !important;
 }
 .standard-div{
   transition: all 2s linear;
